test/valid/OverridenInSuperSuper/SuperSuper.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: SuperSuper.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class SuperSuper extends Object is

  method m: () -> String is "SuperSuper"